--- a/README
+++ b/README
@@ -1,7 +1,1 @@
-# Readme
-
-A simple prototype for the game concept project in Experts in Team, Re³
-
-
-## Contents
-This repository contains an interactive iPhone demo, as well as an HTML implementation of the game statistics.
+old
