Removed pdf and added some skeleton.

--- a/latex/Rapport.tex
+++ b/latex/Rapport.tex
@@ -22,4 +22,21 @@
 \newpage
 
 % Sections
+\begin{abstract}
+Oppsummering av rapporten, 200 ord. Relatere til EiTs læringsmål.
+\end{abstract}
+
+\section{Innledning}
+Gjerne med presentasjon av gruppa og gruppemedl. her
+\section{Hoveddel}
+2 til 4 situasjonsfortellinger
+Teori og begreper flettes inn underveis
+Refleksjoner rundt situasjonene, både individ- og gruppenivå
+Aksjoner (tiltak/videreføre, reflektere)
+\section{Avslutning}
+Avslutning
+Samle trådene
+Hvilke erfaringer tar den enkelte og gruppa med seg videre?
+
+\section{Referanser}
 \end{document}
