oppdatert title. lagt til navn paa brukere

--- a/latex/title.tex
+++ b/latex/title.tex
@@ -24,7 +24,11 @@
 
 \begin{center} \Large
 \emph{Forfattere:}\\
-Kjetil \textsc{Mehl}\\[3cm]
+Kjetil \textsc{Mehl}\\
+Andreas Røysland \textsc{Aarnes}\\
+Christian Aleksander \textsc{Lysne}\\
+Trond Kjetil \textsc{Bremnes}\\
+Ina Sander \textsc{Pedersen}\\ [3cm]
 \end{center}
  
 % Bottom of the page
