--- a/latex/avslutning.tex
+++ b/latex/avslutning.tex
@@ -1,6 +1,4 @@
 \section{Avslutning}
-
-hei flott prosjekt
-
-\subsection{underoverskrift}
-hallo \emph{hallo}
+Avslutning
+Samle trådene
+Hvilke erfaringer tar den enkelte og gruppa med seg videre?
