lagt til referanseliste. begynt aa skrive en situasjon i hoveddel

--- a/latex/Rapport.tex
+++ b/latex/Rapport.tex
@@ -35,5 +35,7 @@ Oppsummering av rapporten, 200 ord. Relatere til EiTs læringsmål.
 % Avslutning
 \include{avslutning}
 
-\section{Referanser}
+% Referanser
+\include{referanser}
+
 \end{document}
