--- a/latex/hoveddel.tex
+++ b/latex/hoveddel.tex
@@ -3,3 +3,13 @@
 Teori og begreper flettes inn underveis
 Refleksjoner rundt situasjonene, både individ- og gruppenivå
 Aksjoner (tiltak/videreføre, reflektere)
+
+
+\subsection{Gruppens kommunikasjonsmønster} %gruppelogg 08.02
+Under en av våre gruppediskusjoner 8. februar fikk vi en tilbakemleding av fasilitator på hvordan kommunikasjonen i gruppen utartet seg. For å gå inn i dybden på dette kan det nevnes hvordan stemningen på gruppen var på starten av dagen. Forrige onsdag fikk vi utviklet en idè som alle på gruppen var fornøyde med. Etter flere timers arbeid med dette hadde vi en oppsummering sammen med landsbyens leder for å oppdatere henne på hvordan vi lå an. Det viste seg at idèen vår ikke var bra nok med tanke på at resirkulering ikke stod som hovedfokus. For å følge opp problemsstillingen vår og landsbymålene måtte vi gjøre store endringer. Dette ble en dårlig avslutning på dagen, og motivasjonen sank betraktelig. 
+
+Da vi møtte opp onsdag 8. februar var den generelle stemningen på gruppen at medlemmene var demotiverte. Det at idèen vår fra den foregående onsdagen føltes som bortkastet lå fortsatt i tankene til alle på gruppen. Kjetil nevnte at han var lite klar for å gå tilbake et skritt og gå gjennom en helt ny idèmyldring, ettersom vi forrige gang endelig følte at vi hadde en idè som alle var fornøyde med. Dette utsagnet var ikke akkurat noe som bidro til en bedre start på dagen for resten av gruppen. Trond og Andreas tenkte at man bare må gjøre det beste utav det, og de startet en diskusjon som gikk ut på å dekomponere idèen vår fra forrige gang. Kjetil kastet seg for på, og motivasjonen hans økte når han innså at dette kanskje ikke var verdens undergang. Etter en tid med brainstorming videreutviklet og endret vi det vi jobbet med forrige onsdag. Lydnivået økte og motivasjonen på gruppen steg blandt flere av medlemmene. En ny idè ble født. \cite{google.no}
+
+Da Andreas følte at gruppen virkelig var i sving, kom fasilitator bort til gruppen med en skisse som viste hvordan kommunikasjonen på gruppen var.
+%bilde av kommunikasjonsmønster på gruppen
+
