Added some text, split document.

--- a/latex/Rapport.tex
+++ b/latex/Rapport.tex
@@ -29,6 +29,9 @@ Oppsummering av rapporten, 200 ord. Relatere til EiTs læringsmål.
 % Innledning
 \include{innledning}
 
+% Presentasjon av gruppen
+\include{gruppen}
+
 % Hoveddel
 \include{hoveddel}
 
