--- a/latex/hoveddel.tex
+++ b/latex/hoveddel.tex
@@ -23,5 +23,6 @@ Det var ingen tvil om at aktiviteten på gruppen ble mer balansert etter denne p
 
 Gruppen ble også bevisst på et annet problem under videre diskusjon om spillidèen. Idèen utviklet seg raskt og det var stor enighet i gruppen. Men da vi begynte å tegne og visualisere idèen viste det seg at alle så for seg forskjellige ting. Selv om kommunikasjonen så ut til å fungere etter situasjonen om gruppens kommunikasjonsmønster, var det likevel store forskjeller i hva de forskjellige medlemmene trodde vi diskuterte. Å gå mer i dybden på det vi diskuterer, snakke om detaljer og være klar over at folk tenker forskjellig førte videre til at slike misforståelser blir unngått.
 
-
+%johnson, hvordan gjøre mangfold til noe positivt
+%teori, forskjellige roller i en gruppe?
  \cite{Johnson}
