update personalia i rapport

--- a/latex/gruppen.tex
+++ b/latex/gruppen.tex
@@ -4,7 +4,7 @@ studenter som studerer datateknikk og informatikk, så det kom ikke some
 noe overraskelse at 3/5 av gruppa hadde en slik spesialisering.
 
 \subsection{Andreas Røysland Aarnes}
-
+Ein ivreg student frå Stavangers beste vestkant. Likar turar i fjellet og hjemmelaga pizza. 
 \subsection{Christian Aleksander Lysne}
 
 \subsection{Ina Sander Pedersen}
