--- a/latex/hoveddel.tex
+++ b/latex/hoveddel.tex
@@ -21,8 +21,11 @@ Christian var veldig trøtt på morgenen, og merket at han var litt i kjelleren.
 
 Det var ingen tvil om at aktiviteten på gruppen ble mer balansert etter denne pausen. Vi ble klar over hvem vi henvender oss til når vi snakker. Andreas sa senere at han begynte å ta dette i betrakning i senere diskusjoner, der han beveger blikket mer for å få visuell kontakt med alle på gruppen. Trond foreslå at man kan legge til spørsmål til gruppemedlemmene om de er enige eller uenige, og rette disse mot dem på gruppen som er mer passive. Dette bidrar til å få mer kommunikasjon mellom alle på gruppen, og inkluderer dem som kan være umotiverte og trøtte eller ikke kommuniserer like mye. 
 
-Gruppen ble også bevisst på et annet problem under videre diskusjon om spillidèen. Idèen utviklet seg raskt og det var stor enighet i gruppen. Men da vi begynte å tegne og visualisere idèen viste det seg at alle så for seg forskjellige ting. Selv om kommunikasjonen så ut til å fungere etter situasjonen om gruppens kommunikasjonsmønster, var det likevel store forskjeller i hva de forskjellige medlemmene trodde vi diskuterte. Å gå mer i dybden på det vi diskuterer, snakke om detaljer og være klar over at folk tenker forskjellig førte videre til at slike misforståelser blir unngått.
+Gruppen ble også bevisst på et annet problem under videre diskusjon om spillidèen. Idèen utviklet seg raskt og det var stor enighet i gruppen. Men da vi begynte å tegne og visualisere idèen viste det seg at flere av gruppemedlemmene så for seg forskjellige ting. Selv om kommunikasjonen så ut til å fungere etter situasjonen om gruppens kommunikasjonsmønster, var det likevel store forskjeller i hva de forskjellige medlemmene trodde vi diskuterte. Å gå mer i dybden på det vi diskuterer, snakke om detaljer og være klar over at folk tenker forskjellig førte videre til at slike misforståelser blir unngått. Det å kartlegge slike ulikheter kan også brukes som en fordel i gruppen. I neste avsnitt reflekteres det over denne situasjonen i forhold til gruppemedlemmenes ulike tankegang.
 
-%johnson, hvordan gjøre mangfold til noe positivt
-%teori, forskjellige roller i en gruppe?
- \cite{Johnson}
+%johnson, kap 10.
+Johnson \& Johnson  \cite{Johnson} understreker viktigheten av mangfold i en gruppe. I forhold til denne situasjonen er ulike personligheter et viktig bidrag til en gruppe. Det at gruppens medlemmer tenker forskjellig kan virke frusterende når man skaper en idé. Hvis gruppen klarer å kartlegge disse ulikhetene kan gruppemedlemmenes ulike tankegang bidra til å skape noe større og bredere enn hvis alle på gruppen hadde hatt helt lik tankegang. Personlige karaktererforskjeller på vår gruppe er kjønn, studieretning og ulike verdier og meninger. I tillegg har vi ulike egenskaper og ulik kunnskap. De på gruppen som studerer datateknikk er mer likesinnede og har ofte like forestillinger under idèutviklingen. De tar hensyn til programmering og gjennomføring av spillet, noe som Andreas og Ina ikke tenker på, ettersom de ikke har noe kunnskap innen dette feltet. Men Ina og Andreas tar andre ting i betrakning under idèutviklingen, der blandt annet inkorporering av biologi og geologi i spillet står sentralt. Dette fører til at når vi i den nevnte situasjonen kommer frem til noe alle er enige i, betyr ikke dette at man vet hva man er enige om. Fordi gruppens medlemmer har ulike bilder i tankene om hvordan de ser for seg denne idèen. Vi fant ut at dette var tilfelle. Så hvordan kan vi dra nytte av dette? 
+I utgangspunktet skulle man tro at en homogen gruppe som består av datastudenter er det optimale i gjennomførelsen av et slikt prosjekt. Johnson \& Johnson nevner flere ulemper ved en lik gruppe. I denne situasjonen skal vi nevne en av disse ulempene. En slik gruppe kan  mangle et bredt perspektiv. Kjetil, Trond og Christian hadde antageligvis klart å lage et kjempebra produkt, men med en homogen tankegang er det antageligvis mange ting de ikke har tenkt over. Ina og Andreas, som ikke har kunnskaper innen programmering, ser på oppgaven i et annet perspektiv enn resten av gruppen. De har ikke noe å bidra med rent teknisk til resultatet, men de ser på ting annerledes og kaster lys over oppgaven på en måte datastudentene ikke tar i betrakning. Da vi prøvde å flette sammen hver persons synspunkt på hva vi trodde vi hadde kommet frem til, førte dette til at hele gruppen endret sin personlige idè over hva vi hadde diskutert og gjorde det om til gruppen sin idè. Dette resulterte i noe ingen på gruppen hadde sett for seg, men som alle var veldig fornøyde med.
+Kjetil mente først at denne diskusjonen var sløsing og tid og så på dette som en unødvendig del av gruppearbeidet. Men den idèen gruppen satt igjen med på slutten av dagen fikk Kjetil til å tenke annerledes. Han ble overrasket over at hans eget syn på dataspillet vi utviklet ble såpass endret da de andre på gruppen fortalte hva de tenkte. 
+
+Ulike synspunkt og meninger, i tillegg til ulik faglig kompetanse og tankegang, førte til et resultat ingen på gruppen så for seg i starten, men som alle var meget fornøyde med. Vi klarte å dra nytte av disse ulikhetene.
