Formatted some text.

--- a/latex/gruppen.tex
+++ b/latex/gruppen.tex
@@ -11,8 +11,9 @@ en god karakter.
 
 Kjetil hadde delte meninger om Eksperter i Team. Desse meningene var
 hovedsaklig basert på rykter og fortellinger fra andre studenter. Noen
-mente at dette kurset var et tidssluk og ``svada'', mens andre sa at det
-var et av de bedre kursene på NTNU.
+mente at dette kurset var et tidssluk og ``svada'', andre sa at det var
+et av de bedre kursene på NTNU. Det at denne landsbyen var førstevalget
+hans var dog en motivasjonsfaktor.
 \\
 \\
 \textbf{Andreas Røysland Aarnes:}\\
@@ -25,3 +26,6 @@ og hjemmelaga pizza.\\
 spill tidligere. Han hadde en positiv innstilling til EiT, men var
 redd det kunne ta noe mye tid.\\
 \textbf{Trond Kjetil Bremnes:}\\
+
+\subsection{Samarbeidsavtalen}
+
