Added some group stuff.

--- a/latex/gruppen.tex
+++ b/latex/gruppen.tex
@@ -28,4 +28,25 @@ redd det kunne ta noe mye tid.\\
 \textbf{Trond Kjetil Bremnes:}\\
 
 \subsection{Samarbeidsavtalen}
-
+Under den første landsbydagen fikk gruppen i oppgave å forfatte en
+samarbeidsavtale~\cite{samarbeidsavtale}. Målet med denne avtalen var å
+lage noen rammer rundt gruppesamarbeidet som alle i gruppen var
+inneforstått med. De viktigste punktene samt hva vi ble enige om er tatt
+med nedenfor:
+% Ta med her?
+\begin{itemize}
+	\item Hovedmomenter: Gruppen skal sette felles mål, og alle skal
+	være klar over desse.  Gruppa skal være åpen for at alle skal komme med
+	innspill.
+	\item Møtestruktur: Hver onsdag skal vi starte dagen med å fortelle
+	hva man har gjort siden sist, i tillegg til hva man skal gjøre/har som
+	mål i løpet av dagen. Her er det også viktig å belyse eventuelle
+	problemer en har i plenum med resten av gruppa.
+	\item Beslutningsstrategi: Er det noe vi absolutt ikke blir enige
+	om, vil flertallet bestemme.
+\end{itemize}
+Det å fastsette en samarbeidsavtale så tidlig i prosessen viste seg å
+være en god gruppeøvelse. Det gjorde at alle medlemmene måtte ytre hva
+de ønsket å oppnå og forventet av Eksperter i Team. Dette førte til at
+medlemmene ble litt tryggere på hverandre, og fekk en felles
+``platform''.
