Added some figure, displaying some image. Updated the report as well.

--- a/latex/Rapport.tex
+++ b/latex/Rapport.tex
@@ -7,7 +7,7 @@
 \usepackage{wrapfig}
 \usepackage{url}
 \usepackage[utf8]{inputenc} % We want UTF8
-\graphicspath{{./Pictures/}}
+\graphicspath{{./images/}}
 \geometry{a4paper}
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % command to make the lines in title page
 \linespread{1.2}
