--- a/latex/hoveddel.tex
+++ b/latex/hoveddel.tex
@@ -34,7 +34,12 @@ blandt flere av medlemmene. En ny idè ble født.
 Da Andreas følte at gruppen virkelig var i sving, kom fasilitator bort
 til gruppen med en skisse som viste hvordan kommunikasjonen på gruppen
 var.
-%bilde av kommunikasjonsmønster på gruppen
+\begin{figure}
+\begin{center}
+\includegraphics[scale=0.5]{communication}
+\caption{Kommunikasjonsmønster}
+\end{center}
+\end{figure}
 Dette kom som en overaskelse på gruppen. Det viste seg at Andreas,
 Kjetil og Trond var mest aktive, mens Ina og Christian var mer passive.
 Dette måtte diskuteres i gruppen.  Ina mener at årsaken til hennes
