Fixing some text I broke.

--- a/latex/hoveddel.tex
+++ b/latex/hoveddel.tex
@@ -2,9 +2,8 @@
 flettes inn underveis Refleksjoner rundt situasjonene, både individ- og
 gruppenivå Aksjoner (tiltak/videreføre, reflektere)
 
-
-\subsection{Gruppens kommunikasjonsmønster} %gruppelogg 08.02 Under en
-av gruppens diskusjoner 8. februar fikk vi en tilbakemleding av
+\subsection{Gruppens kommunikasjonsmønster} %gruppelogg 08.02 
+Under en av gruppens diskusjoner 8. februar fikk vi en tilbakemelding av
 fasilitator på hvordan kommunikasjonen i gruppen utartet seg. For å gå
 inn i dybden på dette kan det nevnes hvordan stemningen på gruppen var
 på starten av dagen. Forrige onsdag fikk vi utviklet en idè som alle på
@@ -14,7 +13,7 @@ hvordan vi lå an. Det viste seg at idèen vår ikke var bra nok med tanke
 på at resirkulering ikke stod som hovedfokus. For å følge opp
 problemsstillingen vår og landsbymålene måtte vi gjøre store endringer.
 Dette ble en dårlig avslutning på dagen, og motivasjonen sank
-betraktelig. 
+betraktelig.
 
 Da vi møtte opp onsdag 8. februar var den generelle stemningen på
 gruppen at medlemmene var demotiverte. Det at idèen vår fra den
