--- a/latex/gruppen.tex
+++ b/latex/gruppen.tex
@@ -17,15 +17,17 @@ hans var dog en motivasjonsfaktor.
 \\
 \\
 \textbf{Andreas Røysland Aarnes:}\\
-Ein ivreg student frå Stavangers beste vestkant. Likar turar i fjellet
-og hjemmelaga pizza.\\
+Andreas er 25 år gammel, fra Stavanger og studerer geologi og geofysikk. Han jobber for Det Norske Oljeselskap og driver ellers mye med musikk. Innen spillverdenen er han spesielt interessert i strategispill. EiT for Andreas viste seg å være mye kjekkere enn det han hadde forventet, ettersom han får bruke sine kreative og sosiale sider på nye måter. \\
 \textbf{Christian Aleksander Lysne:}\\
+spiller basketball \\
 \textbf{Ina Sander Pedersen:}\\
+flink å lage muffins \\
 \textbf{Kjetil Mehl:}\\
 23 år gammel datateknikkstudent fra Rosendal. Har jobbet en del med
 spill tidligere. Han hadde en positiv innstilling til EiT, men var
 redd det kunne ta noe mye tid.\\
 \textbf{Trond Kjetil Bremnes:}\\
+He is from the far north! \\
 
 \subsection{Samarbeidsavtalen}
 Under den første landsbydagen fikk gruppen i oppgave å forfatte en
