lagt inn noe teori/referanse i hoveddel

--- a/latex/hoveddel.tex
+++ b/latex/hoveddel.tex
@@ -72,7 +72,7 @@ Andreas sa senere at han begynte å ta dette i betrakning i senere
 diskusjoner, der han beveger blikket mer for å få visuell kontakt med
 alle på gruppen. Trond foreslå at man kan legge til spørsmål til
 gruppemedlemmene om de er enige eller uenige, og rette disse mot dem på
-gruppen som er mer passive. Dette bidrar til å få mer kommunikasjon
+gruppen som er mer passive. Ifølge Schwarz \cite{Schwarz} er det å invitere til drøfting av egne innspill en god måte å øke effektiviteten i gruppen på. Dette bidrar til å få mer kommunikasjon
 mellom alle på gruppen, og inkluderer dem som kan være umotiverte og
 trøtte eller ikke kommuniserer like mye. 
 
@@ -82,9 +82,9 @@ Men da vi begynte å tegne og visualisere idèen viste det seg at flere av
 gruppemedlemmene så for seg forskjellige ting. Selv om kommunikasjonen
 så ut til å fungere etter situasjonen om gruppens kommunikasjonsmønster,
 var det likevel store forskjeller i hva de forskjellige medlemmene
-trodde vi diskuterte. Å gå mer i dybden på det vi diskuterer, snakke om
+trodde vi diskuterte. Her har Schwarz en teori om at man ved å dele all relevant informasjon, spille med åpne kort og avdekke resonnementene bak de innspillene man kommer med vil hjelpe gruppen i å arbeide effektivt sammen. Ved å gå mer i dybden på det vi diskuterte, snakke om
 detaljer og være klar over at folk tenker forskjellig førte videre til
-at slike misforståelser blir unngått. Det å kartlegge slike ulikheter
+at slike misforståelser ble unngått. Det å kartlegge slike ulikheter
 kan også brukes som en fordel i gruppen. I neste avsnitt reflekteres det
 over denne situasjonen i forhold til gruppemedlemmenes ulike tankegang.
 
