--- a/latex/referanser.tex
+++ b/latex/referanser.tex
@@ -1,4 +1,6 @@
 \begin{thebibliography}{1} %antall ref?
+	\bibitem{Schwarz}
+	Schwarz 2002 The skilled facilitator. Jossey - Bass
 	\bibitem{Johnson}
 	Johnson \& Johnson 2006 Joining Together. Group theory and group skills. Pearson
 
