Restructured into more individual parts.

--- a/latex/hoveddel.tex
+++ b/latex/hoveddel.tex
@@ -1,8 +1,7 @@
-\section{Hoveddel} 2 til 4 situasjonsfortellinger Teori og begreper
-flettes inn underveis Refleksjoner rundt situasjonene, både individ- og
-gruppenivå Aksjoner (tiltak/videreføre, reflektere)
-
-\subsection{Gruppens kommunikasjonsmønster} %gruppelogg 08.02 
+%2 til 4 situasjonsfortellinger Teori og begreper
+%flettes inn underveis Refleksjoner rundt situasjonene, både individ- og
+%gruppenivå Aksjoner (tiltak/videreføre, reflektere)
+\section{Kommunikasjonsmønster} %gruppelogg 08.02 
 Under en av gruppens diskusjoner 8. februar fikk vi en tilbakemelding av
 fasilitator på hvordan kommunikasjonen i gruppen utartet seg. For å gå
 inn i dybden på dette kan det nevnes hvordan stemningen på gruppen var
@@ -14,7 +13,7 @@ på at resirkulering ikke stod som hovedfokus. For å følge opp
 problemsstillingen vår og landsbymålene måtte vi gjøre store endringer.
 Dette ble en dårlig avslutning på dagen, og motivasjonen sank
 betraktelig.
-
+\subsection{Demotivasjon til motivasjon}
 Da vi møtte opp onsdag 8. februar var den generelle stemningen på
 gruppen at medlemmene var demotiverte. Det at idèen vår fra den
 foregående onsdagen føltes som bortkastet lå fortsatt i tankene til alle
@@ -29,7 +28,7 @@ hans økte når han innså at dette kanskje ikke var verdens undergang.
 Etter en tid med brainstorming videreutviklet og endret vi det vi jobbet
 med forrige onsdag. Lydnivået økte og motivasjonen på gruppen steg
 blandt flere av medlemmene. En ny idè ble født.
-
+\subsection{Individuelle oppfatninger}
 Da Andreas følte at gruppen virkelig var i sving, kom fasilitator bort
 til gruppen med en skisse som viste hvordan kommunikasjonen på gruppen
 var.
@@ -72,9 +71,11 @@ Andreas sa senere at han begynte å ta dette i betrakning i senere
 diskusjoner, der han beveger blikket mer for å få visuell kontakt med
 alle på gruppen. Trond foreslå at man kan legge til spørsmål til
 gruppemedlemmene om de er enige eller uenige, og rette disse mot dem på
-gruppen som er mer passive. Ifølge Schwarz \cite{Schwarz} er det å invitere til drøfting av egne innspill en god måte å øke effektiviteten i gruppen på. Dette bidrar til å få mer kommunikasjon
-mellom alle på gruppen, og inkluderer dem som kan være umotiverte og
-trøtte eller ikke kommuniserer like mye. 
+gruppen som er mer passive. Ifølge Schwarz \cite{Schwarz} er det å
+invitere til drøfting av egne innspill en god måte å øke effektiviteten
+i gruppen på. Dette bidrar til å få mer kommunikasjon mellom alle på
+gruppen, og inkluderer dem som kan være umotiverte og trøtte eller ikke
+kommuniserer like mye. 
 
 Gruppen ble også bevisst på et annet problem under videre diskusjon om
 spillidèen. Idèen utviklet seg raskt og det var stor enighet i gruppen.
@@ -82,12 +83,15 @@ Men da vi begynte å tegne og visualisere idèen viste det seg at flere av
 gruppemedlemmene så for seg forskjellige ting. Selv om kommunikasjonen
 så ut til å fungere etter situasjonen om gruppens kommunikasjonsmønster,
 var det likevel store forskjeller i hva de forskjellige medlemmene
-trodde vi diskuterte. Her har Schwarz en teori om at man ved å dele all relevant informasjon, spille med åpne kort og avdekke resonnementene bak de innspillene man kommer med vil hjelpe gruppen i å arbeide effektivt sammen. Ved å gå mer i dybden på det vi diskuterte, snakke om
-detaljer og være klar over at folk tenker forskjellig førte videre til
-at slike misforståelser ble unngått. Det å kartlegge slike ulikheter
+trodde vi diskuterte. Her har Schwarz en teori om at man ved å dele all
+relevant informasjon, spille med åpne kort og avdekke resonnementene bak
+de innspillene man kommer med vil hjelpe gruppen i å arbeide effektivt
+sammen. Ved å gå mer i dybden på det vi diskuterte, snakke om detaljer
+og være klar over at folk tenker forskjellig førte videre til at slike
+misforståelser ble unngått. Det å kartlegge slike ulikheter
 kan også brukes som en fordel i gruppen. I neste avsnitt reflekteres det
 over denne situasjonen i forhold til gruppemedlemmenes ulike tankegang.
-
+\subsection{Refleksjon}
 %johnson, kap 10.
 Johnson \& Johnson  \cite{Johnson} understreker viktigheten av mangfold
 i en gruppe. I forhold til denne situasjonen er ulike personligheter et
