Fixed some formatting.

--- a/latex/gruppen.tex
+++ b/latex/gruppen.tex
@@ -19,29 +19,41 @@ hans var dog en motivasjonsfaktor.
 \textbf{Andreas Røysland Aarnes}\\
 Andreas er 25 år gammel, fra Stavanger og studerer geologi og geofysikk. Han jobber for Det Norske Oljeselskap og driver ellers mye med musikk. Innen spillverdenen er han spesielt interessert i strategispill. EiT for Andreas viste seg å være mye kjekkere enn det han hadde forventet, ettersom han får bruke sine kreative og sosiale sider på nye måter. 
 
-Gruppen ser på Andreas som en optimistisk og entusiastisk person. Han er ivrig og sosial, noe som gir ham en stor innflytelse på gruppen. En av hans svake sider er at hans entusiasme og innflytelse kan ha en negativ innvirkning på gruppens avgjørelser, ettersom han kan virke noe dominerende. \\
-
-
+Gruppen ser på Andreas som en optimistisk og entusiastisk person. Han er
+ivrig og sosial, noe som gir ham en stor innflytelse på gruppen. En av
+hans svake sider er at hans entusiasme og innflytelse kan ha en negativ
+innvirkning på gruppens avgjørelser, ettersom han kan virke noe
+dominerende. \\\\
 \textbf{Christian Aleksander Lysne}\\
 spiller basketball... (christian må skrive litt om seg selv her)
 
-Gruppens syn på Christian er at han virker som en rolig person som alltid har kontroll. Han blir fort engasjert av andres inspill og er flink til å lytte til de andre på gruppen. Enkelte av gruppemedlemmene mener Christian er en typisk lærer/leder; en man henvender seg til fordi han alltid har kontroll og er hjelpsom. Christian mener selv at han har en tendens til å kjede seg når han jobber med det samme lenge. Han liker variert arbeid. \\
-
-
+Gruppens syn på Christian er at han virker som en rolig person som
+alltid har kontroll. Han blir fort engasjert av andres inspill og er
+flink til å lytte til de andre på gruppen. Enkelte av gruppemedlemmene
+mener Christian er en typisk lærer/leder; en man henvender seg til fordi
+han alltid har kontroll og er hjelpsom. Christian mener selv at han har
+en tendens til å kjede seg når han jobber med det samme lenge. Han liker
+variert arbeid. \\\\
 \textbf{Ina Sander Pedersen}\\
 flink å lage muffins ... (Ina må skrive litt om seg selv her)
 
-Ina ser på seg selv som ryddig og presis i sitt arbeid, noe resten av gruppen er enig i. Gruppen synes at Ina er en rolig person som er mer forsiktig enn impulsiv. Men når en diskusjon begynner å bli ferdig og gruppemedlemmene begynner å bli enige, er Ina flink til å kartlegge og få kontroll over situasjonen og hva gruppen har kommet frem til. Gruppen synes hun er vennlig og aksepterende.\\
-
-
+Ina ser på seg selv som ryddig og presis i sitt arbeid, noe resten av
+gruppen er enig i. Gruppen synes at Ina er en rolig person som er mer
+forsiktig enn impulsiv. Men når en diskusjon begynner å bli ferdig og
+gruppemedlemmene begynner å bli enige, er Ina flink til å kartlegge og
+få kontroll over situasjonen og hva gruppen har kommet frem til. Gruppen
+synes hun er vennlig og aksepterende.\\\\
 \textbf{Kjetil Mehl}\\
 23 år gammel datateknikkstudent fra Rosendal. Har jobbet en del med
 spill tidligere. Han hadde en positiv innstilling til EiT, men var
 redd det kunne ta noe mye tid.
 
-Gruppen synes Kjetil er flink til å ha kontroll over arbeidet underveis i prosessen. Han er objektiv og analytisk, i tillegg til å være en person som holder en god stemning på gruppen. Han jobber veldig effektivt når han jobber alene, men det hender at han kan bli litt fraværende og usosial når han først er godt i gang med individuelt arbeid. \\
-
-
+Gruppen synes Kjetil er flink til å ha kontroll over arbeidet underveis
+i prosessen. Han er objektiv og analytisk, i tillegg til å være en
+person som holder en god stemning på gruppen. Han jobber veldig
+effektivt når han jobber alene, men det hender at han kan bli litt
+fraværende og usosial når han først er godt i gang med individuelt
+arbeid. \\\\
 \textbf{Trond Kjetil Bremnes}\\
 He is from the far north! \\
 
