Info om christian

--- a/latex/gruppen.tex
+++ b/latex/gruppen.tex
@@ -23,7 +23,7 @@ Gruppen ser på Andreas som en optimistisk og entusiastisk person. Han er ivrig 
 
 
 \textbf{Christian Aleksander Lysne}\\
-spiller basketball... (christian må skrive litt om seg selv her)
+Christian er 22 år, født og oppvokst i Trondheim. Han studerer prosjektledelse med spesialisering i industriel økonomi, og er tidligere utdannet som dataingeniør. På fritiden spiller Christian basketball og jobber med spillfirmaet sitt, Peekaboo. Det er denne spillbakgrunnen som var avgjørende for at Christian valgte denne EiT- landsbyen. Han hadde ikke forventet å lære noe nytt på EiT, men ble positivt overrasket.   
 
 Gruppens syn på Christian er at han virker som en rolig person som alltid har kontroll. Han blir fort engasjert av andres inspill og er flink til å lytte til de andre på gruppen. Enkelte av gruppemedlemmene mener Christian er en typisk lærer/leder; en man henvender seg til fordi han alltid har kontroll og er hjelpsom. Christian mener selv at han har en tendens til å kjede seg når han jobber med det samme lenge. Han liker variert arbeid. \\
 
