--- a/latex/gruppen.tex
+++ b/latex/gruppen.tex
@@ -46,7 +46,7 @@ Gruppen synes Kjetil er flink til å ha kontroll over arbeidet underveis i prose
 He is from the far north! \\
 
 \subsection{Samarbeidsavtalen}
-En samarbeidsavtale~\cite{samarbeidsavtale} er en skriftlig avtale
+En samarbeidsavtale \cite{samarbeidsavtale} er en skriftlig avtale
 inngått mellom alle parter i en samarbeidskontekst. Denne avtalen skal
 danne rammer for hva de ulike partene kan forvente av samarbeidet, og
 hva de eventuelt ikke kan forvente. Denne avtalen er retningslinjer for
