--- a/latex/innledning.tex
+++ b/latex/innledning.tex
@@ -1,11 +1,11 @@
 \section{Innledning}
-Målet i Eksperter i Team er at studentene skal anvende sin fagkompetanse
-og utvikle sin samspillkompetanse gjennom å arbeide resultatrettet med
-relevante problemstillinger og situasjoner. Nedenfor er den overordnede
-intensjonen av Eksperter i Team gjengitt:\\
+Målet i Eksperter i Team (herunder EiT) er at studentene skal anvende
+sin fagkompetanse og utvikle sin samspillkompetanse gjennom å arbeide
+resultatrettet med relevante problemstillinger og situasjoner. Nedenfor
+er den overordnede intensjonen av EiT gjengitt:\\
 
-``Målet med Eksperter i Team (EiT) er at studentene både skal anvende
-sin fagkompetanse og utvikle sin samspillskompetanse gjennom å arbeide
+``Målet med Eksperter i Team er at studentene både skal anvende sin
+fagkompetanse og utvikle sin samspillskompetanse gjennom å arbeide
 resultatrettet med relevante problemstillinger for samfunns- og
 arbeidsliv. Studentene skal utvikle sine teoretiske kunnskaper og
 praktiske ferdigheter i tverrfaglig prosjektarbeid og få trening i
