--- a/latex/Rapport.tex
+++ b/latex/Rapport.tex
@@ -35,6 +35,9 @@ Oppsummering av rapporten, 200 ord. Relatere til EiTs læringsmål.
 % Hoveddel
 \include{hoveddel}
 
+% Evaluerings
+\include{evaluering}
+
 % Avslutning
 \include{avslutning}
 
