--- a/latex/hoveddel.tex
+++ b/latex/hoveddel.tex
@@ -5,29 +5,29 @@
 Under en av gruppens diskusjoner 8. februar fikk vi en tilbakemelding av
 fasilitator på hvordan kommunikasjonen i gruppen utartet seg. For å gå
 inn i dybden på dette kan det nevnes hvordan stemningen på gruppen var
-på starten av dagen. Forrige onsdag fikk vi utviklet en idè som alle på
+på starten av dagen. Forrige onsdag fikk vi utviklet en idé som alle på
 gruppen var fornøyde med. Etter flere timers arbeid med dette hadde vi
 en oppsummering sammen med landsbyens leder for å oppdatere henne på
-hvordan vi lå an. Det viste seg at idèen vår ikke var bra nok med tanke
+hvordan vi lå an. Det viste seg at ideen vår ikke var bra nok med tanke
 på at resirkulering ikke stod som hovedfokus. For å følge opp
 problemsstillingen vår og landsbymålene måtte vi gjøre store endringer.
 Dette ble en dårlig avslutning på dagen, og motivasjonen sank
 betraktelig.
 \subsection{Demotivasjon til motivasjon}
 Da vi møtte opp onsdag 8. februar var den generelle stemningen på
-gruppen at medlemmene var demotiverte. Det at idèen vår fra den
+gruppen at medlemmene var demotiverte. Det at ideen vår fra den
 foregående onsdagen føltes som bortkastet lå fortsatt i tankene til alle
 på gruppen. Kjetil nevnte at han var lite klar for å gå tilbake et
-skritt og gå gjennom en helt ny idèmyldring, ettersom vi forrige gang
-endelig følte at vi hadde en idè som alle var fornøyde med. Dette
+skritt og gå gjennom en helt ny idémyldring, ettersom vi forrige gang
+endelig følte at vi hadde en idé som alle var fornøyde med. Dette
 utsagnet var ikke akkurat noe som bidro til en bedre start på dagen for
 resten av gruppen. Trond og Andreas tenkte at man bare må gjøre det
 beste utav det, og de startet en diskusjon som gikk ut på å dekomponere
-idèen vår fra forrige gang. Kjetil kastet seg for på, og motivasjonen
+ideen vår fra forrige gang. Kjetil kastet seg for på, og motivasjonen
 hans økte når han innså at dette kanskje ikke var verdens undergang.
 Etter en tid med brainstorming videreutviklet og endret vi det vi jobbet
 med forrige onsdag. Lydnivået økte og motivasjonen på gruppen steg
-blandt flere av medlemmene. En ny idè ble født.
+blandt flere av medlemmene. En ny idé ble født.
 \subsection{Individuelle oppfatninger}
 Da Andreas følte at gruppen virkelig var i sving, kom fasilitator bort
 til gruppen med en skisse som viste hvordan kommunikasjonen på gruppen
@@ -78,8 +78,8 @@ gruppen, og inkluderer dem som kan være umotiverte og trøtte eller ikke
 kommuniserer like mye. 
 
 Gruppen ble også bevisst på et annet problem under videre diskusjon om
-spillidèen. Idèen utviklet seg raskt og det var stor enighet i gruppen.
-Men da vi begynte å tegne og visualisere idèen viste det seg at flere av
+spillideen. Ideen utviklet seg raskt og det var stor enighet i gruppen.
+Men da vi begynte å tegne og visualisere ideen viste det seg at flere av
 gruppemedlemmene så for seg forskjellige ting. Selv om kommunikasjonen
 så ut til å fungere etter situasjonen om gruppens kommunikasjonsmønster,
 var det likevel store forskjeller i hva de forskjellige medlemmene
@@ -103,14 +103,14 @@ gruppen hadde hatt helt lik tankegang. Personlige karaktererforskjeller
 på vår gruppe er kjønn, studieretning og ulike verdier og meninger. I
 tillegg har vi ulike egenskaper og ulik kunnskap. De på gruppen som
 studerer datateknikk er mer likesinnede og har ofte like forestillinger
-under idèutviklingen. De tar hensyn til programmering og gjennomføring
+under idéutviklingen. De tar hensyn til programmering og gjennomføring
 av spillet, noe som Andreas og Ina ikke tenker på, ettersom de ikke har
 noe kunnskap innen dette feltet. Men Ina og Andreas tar andre ting i
-betrakning under idèutviklingen, der blandt annet inkorporering av
+betrakning under idéutviklingen, der blandt annet inkorporering av
 biologi og geologi i spillet står sentralt. Dette fører til at når vi i
 den nevnte situasjonen kommer frem til noe alle er enige i, betyr ikke
 dette at man vet hva man er enige om. Fordi gruppens medlemmer har ulike
-bilder i tankene om hvordan de ser for seg denne idèen. Vi fant ut at
+bilder i tankene om hvordan de ser for seg denne ideen. Vi fant ut at
 dette var tilfelle. Så hvordan kan vi dra nytte av dette?  I
 utgangspunktet skulle man tro at en homogen gruppe som består av
 datastudenter er det optimale i gjennomførelsen av et slikt prosjekt.
@@ -125,11 +125,11 @@ rent teknisk til resultatet, men de ser på ting annerledes og kaster lys
 over oppgaven på en måte datastudentene ikke tar i betrakning. Da vi
 prøvde å flette sammen hver persons synspunkt på hva vi trodde vi hadde
 kommet frem til, førte dette til at hele gruppen endret sin personlige
-idè over hva vi hadde diskutert og gjorde det om til gruppen sin idè.
+idé over hva vi hadde diskutert og gjorde det om til gruppen sin idé.
 Dette resulterte i noe ingen på gruppen hadde sett for seg, men som alle
 var veldig fornøyde med.  Kjetil mente først at denne diskusjonen var
 sløsing og tid og så på dette som en unødvendig del av gruppearbeidet.
-Men den idèen gruppen satt igjen med på slutten av dagen fikk Kjetil til
+Men den ideen gruppen satt igjen med på slutten av dagen fikk Kjetil til
 å tenke annerledes. Han ble overrasket over at hans eget syn på
 dataspillet vi utviklet ble såpass endret da de andre på gruppen
 fortalte hva de tenkte. 
